Fix: 자식 댓글이 없는 INVISIBLE, DELTED 댓글 전달하는 버그 수정